Добавлены элементы страницы и классы

--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <! DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Главная 1440px</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Philosopher:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="main.css" />    
-</head>
-<body>
-    <h1 class="main-header">Тестовое задание</h1>
-    <p class="region">Ural 03</p>
-    <h2 class="mytitle">Affinage</h2>
-    <p class="tagline">Очень хороший слоган</p>        
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Главная 1440px</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Philosopher:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="main.css" />    
+    </head>
+    <body class="main-body main-body_width_1440">
+        <h1 class="main-header main-header_directions_left-top">Тестовое задание</h1>
+        <span class="letter-a">A</span>
+        <p class="region">Ural 03</p>
+        <h2 class="mytitle">Affinage</h2>
+        <p class="tagline tagline_directions_left-top">Очень хороший слоган</p>
+        <p class="letters-1">
+            <span class="letters-1__triangle-1"></span>
+            <span class="letters-1__a">A</span>
+            <span class="letters-1__f">F</span>
+            <span class="letters-1__f">F</span>
+            <span class="letters-1__i">I</span>
+            <span class="letters-1__n">N</span>
+            <span class="letters-1__triangle-2"></span>
+        </p>
+        <p class="letters-2">
+            <span class="letters-2__a">A</span>
+            <span class="letters-2__triangle-1"></span>
+            <span class="letters-2__g">G</span>
+            <span class="letters-2__e">E</span>
+            <span class="letters-2__triangle-2"></span>
+        </p>
+    </body>
 </html>
