--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <title>Главная 1440px</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Philosopher:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="main.css" />    
+        <link rel="stylesheet" type="text/css" href="css/main.css" />    
     </head>
     <body class="main-body main-body_width_1440">
-        <h1 class="main-header main-header_directions_left-top">Тестовое задание</h1>
+        <h1 class="main-header main-header__rotate">Тестовое задание</h1>
         <span class="letter-a">A</span>
         <svg class="menu" width="20" height="14">
             <line x1="0" y1="1" x2="20" y2="1" stroke="#000" stroke-width="2px"/>
