Для пункта меню добавлен табиндекс, для интерактивности и добавлено обрамление меню

--- a/index.html
+++ b/index.html
@@ -10,43 +10,48 @@
     </head>
     <body class="main-body main-body_width_1440">
         <h1 class="main-header main-header__rotate">Тестовое задание</h1>
-        <span class="letter-a">A</span>
-        <svg class="menu" width="20" height="14">
-            <line x1="0" y1="1" x2="20" y2="1" stroke="#000" stroke-width="2px"/>
-            <line x1="0" y1="7" x2="20" y2="7" stroke="#000" stroke-width="2px"/>
-            <line x1="0" y1="13" x2="20" y2="13" stroke="#000" stroke-width="2px"/>
-        </svg>
-        <p class="region">Ural 03</p>
-        <h2 class="mytitle">Affinage</h2>
-        <p class="tagline tagline_directions_left-top">Очень хороший слоган</p>
-        <img class="picture1" src="img/photo1.jpg" alt="Arc de la Rua Augusta in Lisbon, Portugal">
-        <img class="picture2" src="img/photo2.jpg" alt="Мотоцикл урал">
-        <p class="letters-1">
-            <svg class="letters-1__triangle-1" width="23" height="23">
-                <polygon points="0,22 11,0 21,21 24,23 0,23"/>                
-            </svg>
-            <span class="letters-1__a">A</span>
-            <span class="letters-1__f">F</span>
-            <span class="letters-1__f">F</span>
-            <span class="letters-1__i">I</span>
-            <span class="letters-1__n">N</span>
-            <svg class="letters-1__triangle-2" width="24" height="19.5">
-                <line x1="0" y1="19" x2="9" y2="0" stroke="#000"/>
-                <line x1="9" y1="0" x2="19" y2="19" stroke="#000"/> 
-            </svg>
-        </p>
-        <p class="letters-2">
-            <span class="letters-2__a">A</span>
-            <svg class="letters-2__triangle-1" width="24" height="24">
-                <line x1="1" y1="22" x2="11" y2="0" stroke="#000"/>
-                <line x1="11" y1="0" x2="21" y2="21" stroke="#000"/>
-                <line x1="0" y1="22" x2="24" y2="22" stroke="#000"/>
-            </svg>
-            <span class="letters-2__g">G</span>
-            <span class="letters-2__e">E</span>
-            <svg class="letters-2__triangle-2" width="23" height="23">
-                <polygon points="0,22 11,0 21,21 24,23 0,23"/>                
-            </svg>            
-        </p>
+        <span class="letter-a letter-a__position">A</span>
+
+        <div class="wrapper">
+            <span class="ring-menu">
+                <svg class="menu" width="20" height="15" tabindex="1">
+                    <line x1="0" y1="2" x2="20" y2="2" stroke="#000" stroke-width="2px"/>
+                    <line x1="0" y1="8" x2="20" y2="8" stroke="#000" stroke-width="2px"/>
+                    <line x1="0" y1="14" x2="20" y2="14" stroke="#000" stroke-width="2px"/>
+                </svg>
+            </span>
+            <p class="region">Ural 03</p>
+            <h2 class="mytitle">Affinage</h2>
+            <p class="tagline tagline_directions_left-top">Очень хороший слоган</p>
+            <img class="picture1" src="img/photo1.jpg" alt="Arc de la Rua Augusta in Lisbon, Portugal">
+            <img class="picture2" src="img/photo2.jpg" alt="Мотоцикл урал">
+            <p class="letters-1">
+                <svg class="letters-1__triangle-1" width="23" height="23">
+                    <polygon points="0,22 11,0 21,21 24,23 0,23"/>                
+                </svg>
+                <span class="letters-1__a">A</span>
+                <span class="letters-1__f">F</span>
+                <span class="letters-1__f">F</span>
+                <span class="letters-1__i">I</span>
+                <span class="letters-1__n">N</span>
+                <svg class="letters-1__triangle-2" width="24" height="19.5">
+                    <line x1="0" y1="19" x2="9" y2="0" stroke="#000"/>
+                    <line x1="9" y1="0" x2="19" y2="19" stroke="#000"/> 
+                </svg>
+            </p>
+            <p class="letters-2">
+                <span class="letters-2__a">A</span>
+                <svg class="letters-2__triangle-1" width="24" height="24">
+                    <line x1="1" y1="22" x2="11" y2="0" stroke="#000"/>
+                    <line x1="11" y1="0" x2="21" y2="21" stroke="#000"/>
+                    <line x1="0" y1="22" x2="24" y2="22" stroke="#000"/>
+                </svg>
+                <span class="letters-2__g">G</span>
+                <span class="letters-2__e">E</span>
+                <svg class="letters-2__triangle-2" width="23" height="23">
+                    <polygon points="0,22 11,0 21,21 24,23 0,23"/>                
+                </svg>            
+            </p>
+        </div>
     </body>
 </html>
