Первая фотография сделаны полностью

--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
                     <line x1="0" y1="14" x2="20" y2="14" stroke="#000" stroke-width="2px"/>
                 </svg>
             </span>
+            <div class="layer-picture1">
+                <img class="picture1" src="img/photo1.jpg" alt="Arc de la Rua Augusta in Lisbon, Portugal">
+            </div>
+            <div clas="layer-picture2">
+                <img class="picture2" src="img/photo2.jpg" alt="Мотоцикл урал">
+            </div>
             <p class="region">Ural 03</p>
             <h2 class="mytitle">Affinage</h2>
             <p class="tagline tagline_directions_left-top">Очень хороший слоган</p>
-            <img class="picture1" src="img/photo1.jpg" alt="Arc de la Rua Augusta in Lisbon, Portugal">
-            <img class="picture2" src="img/photo2.jpg" alt="Мотоцикл урал">
+            
             <p class="letters-1">
                 <svg class="letters-1__triangle-1" width="23" height="23">
                     <polygon points="0,22 11,0 21,21 24,23 0,23"/>                
