Добавлены все мелкие объекты на первый слайд

--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@
                     <line x1="0" y1="8" x2="20" y2="8" stroke="#000" stroke-width="2px"/>
                     <line x1="0" y1="14" x2="20" y2="14" stroke="#000" stroke-width="2px"/>
                 </svg>
-            </span>
+            </span>            
+            <p class="conteiner-flex">
+                <span class="conteiner-flex__item1">(1)</span>
+                <span class="conteiner-flex__item2">(3)</span>
+            </p>
             <div class="layer-picture1">
                 <img class="picture1" src="img/photo1.jpg" alt="Arc de la Rua Augusta in Lisbon, Portugal">
-            </div>
-            <div clas="layer-picture2">
+            </div>            
+            <div class="layer-picture2">
                 <img class="picture2" src="img/photo2.jpg" alt="Мотоцикл урал">
             </div>
+            
+            <svg class="trapezium" width="178" height="283">
+                <polyline points="1,1 177,1 140,282 1,282 1,1" stroke="#000" stroke-width="1" fill="none"/>
+            </svg>
+
             <p class="region">Ural 03</p>
             <h2 class="mytitle">Affinage</h2>
             <p class="tagline tagline_directions_left-top">Очень хороший слоган</p>
