Полностью доверстано + добавлено изображение тени G

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                     <svg class="letters-1__triangle-1" width="23" height="23">
                         <polygon points="0,22 11,0 21,21 24,23 0,23"/>                
                     </svg>
-                    <span class="letters-1__a">A</span>
-                    <span class="letters-1__f">F</span>
-                    <span class="letters-1__f">F</span>
-                    <span class="letters-1__i">I</span>
-                    <span class="letters-1__n">N</span>
+                    <span class="letters letters-1__a">A</span>
+                    <span class="letters letters-1__f1">F</span>
+                    <span class="letters letters-1__f2">F</span>
+                    <span class="letters letters-1__i">I</span>
+                    <span class="letters letters-1__n">N</span>
                     <svg class="letters-1__triangle-2" width="24" height="19.5">
                         <line x1="0" y1="19" x2="9" y2="0" stroke="#000"/>
                         <line x1="9" y1="0" x2="19" y2="19" stroke="#000"/> 
@@ -83,14 +83,14 @@
                 <div class="middle-icon"></div>
 
                 <p class="letters-2">
-                    <span class="letters-2__a">A</span>
+                    <span class="letters letters-2__a">A</span>
                     <svg class="letters-2__triangle-1" width="24" height="24">
                         <line x1="1" y1="22" x2="11" y2="0" stroke="#000"/>
                         <line x1="11" y1="0" x2="21" y2="21" stroke="#000"/>
                         <line x1="0" y1="22" x2="24" y2="22" stroke="#000"/>
                     </svg>
-                    <span class="letters-2__g">G</span>
-                    <span class="letters-2__e">E</span>
+                    <span class="letters letters-2__g">G</span>
+                    <span class="letters letters-2__e">E</span>
                     <svg class="letters-2__triangle-2" width="23" height="23">
                         <polygon points="0,22 11,0 21,21 24,23 0,23"/>                
                     </svg>                
