Исправлена буква в группе2 с F на E

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <span class="letter-group1 letter-group1__position">A</span>
         
         <span class="letter-group2 letter-group2__a">A</span>
-        <span class="letter-group2 letter-group2__f">F</span>
+        <span class="letter-group2 letter-group2__e">E</span>
         
 
         <div class="wrapper">
