Исправлен класс у боди для унификации на main-body_width

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Philosopher:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/main.css" />    
     </head>
-    <body class="main-body main-body_width_1440">
+    <body class="main-body main-body_width">
         <h1 class="main-header main-header__rotate">Тестовое задание</h1>
         <span class="letter-group1 letter-group1__position">A</span>
         
